# resume-ats-predictor

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
data/: raw.dvc
models/: model_xgboost.pkl
notebooks/: 01_eda_preprocessing.py
src/: train.py
tests/: test_model_performance.py
